Fix overflow in callgraph tooltips.

--- a/webroot/css/xhgui.css
+++ b/webroot/css/xhgui.css
@@ -220,7 +220,7 @@ tr .no-results {
 .chart-container {
     position: relative;
 }
-.chart-container .popover {
+.popover {
     min-width: 125px;
     width: auto;
 }
